Updated packages to latest versions. Use new p-floatLabel from PrimeNG. Automatically wrap links in Fields as clickable, and better formatting on labels. Made the New Thing view more mobile friendly

--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -162,7 +162,7 @@
         </span>
       </td>
       <td colspan="3" (click)="quickviewFields(data, $event)" class="zoom-in">
-        <div class="fields-scroller keep-fields-format">{{data.fieldsAsString}}</div>
+        <div class="fields-scroller keep-fields-format" [innerHTML]="data.fieldsAsString"></div>
       </td>
     </tr>
   </ng-template>
