--- a/src/app/datatable/datatable.component.css
+++ b/src/app/datatable/datatable.component.css
@@ -171,7 +171,7 @@
 }
 .quickview-zoom:hover {
   box-shadow: 0 0 5px inset var(--primary-color);
-  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .limit-text {
