Fix Markdown note showing all the time on mobile. Also turn off autocapitalize on property ID

--- a/src/app/manage-template-dialog/manage-template-dialog.component.html
+++ b/src/app/manage-template-dialog/manage-template-dialog.component.html
@@ -94,7 +94,7 @@
                 </span>
                 <span>
                   <p-floatLabel class="short-field">
-                    <input pInputText [id]="field.property" [(ngModel)]="field.property"/>
+                    <input pInputText [id]="field.property" [(ngModel)]="field.property" autocapitalize="false"/>
                     <label>Property/ID</label>
                   </p-floatLabel>
                 </span>
