--- a/src/app/template-dropdown/template-dropdown.component.html
+++ b/src/app/template-dropdown/template-dropdown.component.html
@@ -6,6 +6,7 @@
                 optionLabel="name"
                 [showEmptyMessage]="true"
                 [delay]="0"
+                scrollHeight="50vh"
                 emptyMessage="> No matches"
                 [suggestions]="filteredData"
                 (completeMethod)="autocompleteData($event)"
