--- a/src/app/publicview/publicview.component.html
+++ b/src/app/publicview/publicview.component.html
@@ -1,1 +1,2 @@
-Would load ID <b>{{publicService.publicThingId}}</b> <!-- TTODO -->
+<!-- TTODO -->
+<span [innerHTML]="publicService.thing?.fieldsAsString"></span>
