--- a/src/app/publicview/publicview.component.html
+++ b/src/app/publicview/publicview.component.html
@@ -56,6 +56,7 @@
 @else if (!loading) {
   <div class="main-wrap">
     <div class="panel-wrap">
+      <!-- Note that instead of using a package like sanitize-html we just rely on the built-in Angular DOMSanitizer to prevent XSS -->
       <span [innerHTML]="thing?.fieldsAsString"></span>
     </div>
   </div>
